--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,5 @@
 DATABASE_URL=postgresql://username:password@host:port/dbname
 # Port for Express server
 PORT=3000
+# Session secret for express-session
+SESSION_SECRET=your_secret_here
