--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "pg": "^8.10.0",
     "dotenv": "^16.0.3",
     "body-parser": "^1.20.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "express-session": "^1.17.3",
+    "bcrypt": "^5.1.0"
   }
 }
