--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pc-parts-retail",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express-session": "^1.17.3",
-    "bcrypt": "^5.1.0"
+    "bcrypt": "^5.1.0",
+    "multer": "^1.4.5"
   }
 }
